1.32.11
------
- mpg123: Fix printout of filenames at end (convert/limit text encoding).
- libout123:
-- modules/win32: Align waveOutGetDevCapsA to WAVEOUTCAPSA, in anticipation
   of some UNICODE change.

1.32.10
------
- scripts/tag_lyrics.py: fix for python3 (thanks to cclauss,
  github PR 16)
- libout123: Use strtok_r() to avoid conflicts multithreaded contexts
  (both sides should avoid plain strtok()! Debian-bug 1089543).
- libmpg123:
-- Un-break DLL builds that need I/O functions defined in libmpg123.c
   (like mpg123_open(), bug 374).
- ports/cmake: More fixup to also produce .pc files with Libs.private.

1.32.9
------
- libmpg123:
-- enable 64 bit offset path for MSVCRT and avoid warnings about
   MS's game about POSIX API with and without underscores (bug 373).
-- Increase the library patchlevel, as was forgotten on previous
   release. Now you can check for distversion >= 1.32.8 or
   mpg123 libversion >= 48 patchlevel 3 to see if you're vulnerable
   to CVE-2024-10573.

1.32.8
------
- libmpg123:
-- Add sections to assembly to support PAC/BTI code
   for aarch64 (-mbranch-protection variants), thanks to Bill Roberts
   (github PR 15).
-- Prevent premature application of header info into decoding structure,
   at worst having triggered out-of-bounds writes of decoded PCM data
   (bug 322, again). The bug got named CVE-2024-10573.
- out123: Show --quiet in --longhelp.

1.32.7
------
- ports/cmake: Work around bug in CMake that does not detect FPU on
  Apple ARM CPUs (github PR 14).
- Fix some laziness (func() to func(void)) for standards conformance.

1.32.6
------
- build: Detect forced 64 bit offsets on a dual-mode system that used
  to default to 32 bits and drop ambiguous suffix-less symbols in that
  case. This avoids subtle ABI breakage (causing memory corruption)
  with existing binaries and instead has them fail during runtime linking.
  You trigger that when having -D_FILE_OFFSET_BITS=64 in your compiler
  flags during mpg123 build.

1.32.5