@@ -67,6 +67,8 @@ check_function_exists(shmdt HAVE_SHMDT)
 check_function_exists(shmctl HAVE_SHMCTL)
 check_function_exists(strerror HAVE_STRERROR)
 check_function_exists(strerror_l HAVE_STRERROR_L)
+check_function_exists(strtok_r HAVE_STRTOK_R)
+check_function_exists(strtok_s HAVE_STRTOK_S)
 check_function_exists(fork HAVE_FORK)
 check_function_exists(execvp HAVE_EXECVP)
 check_function_exists(ctermid HAVE_CTERMID)
