@@ -1,5 +1,8 @@
 1.32.11
 ------
+- compat: Map strtok use to strtok_r or strtok_s (MS platforms), if possible.
+  users only in control_generic and libout123 so far. Out123 itself uses mytok.
+  Shall fix bug 376 (build with MSVC again).
 - mpg123: Fix printout of filenames at end (convert/limit text encoding).
 - libout123:
 -- modules/win32: Align waveOutGetDevCapsA to WAVEOUTCAPSA, in anticipation
